--- a/src/css/themes/ios/infragistics.theme.css
+++ b/src/css/themes/ios/infragistics.theme.css
@@ -74,7 +74,7 @@
   color: #000000;
 }
 .stateDisabled {
-  opacity: 0.40;
+  opacity: 0.4;
   cursor: default !important;
 }
 .chartPalette1 {
@@ -178,51 +178,51 @@
   border: 1px solid #f5faff !important;
 }
 .chartMarkerPalette1 {
-  background-color: #fff!important;
+  background-color: #fff !important;
   border: 1px solid #007aff !important;
 }
 .chartMarkerPalette2 {
-  background-color: #fff!important;
+  background-color: #fff !important;
   border: 1px solid #1a87ff !important;
 }
 .chartMarkerPalette3 {
-  background-color: #fff!important;
+  background-color: #fff !important;
   border: 1px solid #3395ff !important;
 }
 .chartMarkerPalette4 {
-  background-color: #fff!important;
+  background-color: #fff !important;
   border: 1px solid #4da2ff !important;
 }
 .chartMarkerPalette5 {
-  background-color: #fff!important;
+  background-color: #fff !important;
   border: 1px solid #66afff !important;
 }
 .chartMarkerPalette6 {
-  background-color: #fff!important;
+  background-color: #fff !important;
   border: 1px solid #7abaff !important;
 }
 .chartMarkerPalette7 {
-  background-color: #fff!important;
+  background-color: #fff !important;
   border: 1px solid #8fc4ff !important;
 }
 .chartMarkerPalette8 {
-  background-color: #fff!important;
+  background-color: #fff !important;
   border: 1px solid #a3cfff !important;
 }
 .chartMarkerPalette9 {
-  background-color: #fff!important;
+  background-color: #fff !important;
   border: 1px solid #b8daff !important;
 }
 .chartMarkerPalette10 {
-  background-color: #fff!important;
+  background-color: #fff !important;
   border: 1px solid #cce4ff !important;
 }
 .chartMarkerPalette11 {
-  background-color: #fff!important;
+  background-color: #fff !important;
   border: 1px solid #e0efff !important;
 }
 .chartMarkerPalette12 {
-  background-color: #fff!important;
+  background-color: #fff !important;
   border: 1px solid #f5faff !important;
 }
 .chartPaletteNegative {
@@ -231,51 +231,51 @@
 }
 .doughnutPalette1 {
   background-color: #007aff !important;
-  border: 1px solid #fff!important;
+  border: 1px solid #fff !important;
 }
 .doughnutPalette2 {
   background-color: #1a87ff !important;
-  border: 1px solid #fff!important;
+  border: 1px solid #fff !important;
 }
 .doughnutPalette3 {
   background-color: #3395ff !important;
-  border: 1px solid #fff!important;
+  border: 1px solid #fff !important;
 }
 .doughnutPalette4 {
   background-color: #4da2ff !important;
-  border: 1px solid #fff!important;
+  border: 1px solid #fff !important;
 }
 .doughnutPalette5 {
   background-color: #66afff !important;
-  border: 1px solid #fff!important;
+  border: 1px solid #fff !important;
 }
 .doughnutPalette6 {
   background-color: #7abaff !important;
-  border: 1px solid #fff!important;
+  border: 1px solid #fff !important;
 }
 .doughnutPalette7 {
   background-color: #8fc4ff !important;
-  border: 1px solid #fff!important;
+  border: 1px solid #fff !important;
 }
 .doughnutPalette8 {
   background-color: #a3cfff !important;
-  border: 1px solid #fff!important;
+  border: 1px solid #fff !important;
 }
 .doughnutPalette9 {
   background-color: #b8daff !important;
-  border: 1px solid #fff!important;
+  border: 1px solid #fff !important;
 }
 .doughnutPalette10 {
   background-color: #cce4ff !important;
-  border: 1px solid #fff!important;
+  border: 1px solid #fff !important;
 }
 .doughnutPalette11 {
   background-color: #e0efff !important;
-  border: 1px solid #fff!important;
+  border: 1px solid #fff !important;
 }
 .doughnutPalette12 {
   background-color: #f5faff !important;
-  border: 1px solid #fff!important;
+  border: 1px solid #fff !important;
 }
 .boxShadow {
   box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.25) !important;
@@ -400,7 +400,7 @@
   cursor: pointer;
   position: relative;
   margin: 2px 0 0 0;
-  padding: .5em .5em .5em .7em;
+  padding: 0.5em 0.5em 0.5em 0.7em;
   min-height: 0;
   /* support: IE7 */
   font-size: 100%;
@@ -413,7 +413,7 @@
 }
 .ui-accordion .ui-accordion-header .ui-accordion-header-icon {
   position: absolute;
-  left: .5em;
+  left: 0.5em;
   top: 50%;
   margin-top: -8px;
 }
@@ -433,7 +433,7 @@
   position: relative;
   padding: 0;
   line-height: normal;
-  margin-right: .1em;
+  margin-right: 0.1em;
   cursor: pointer;
   vertical-align: middle;
   text-align: center;
@@ -467,20 +467,20 @@ button.ui-button-icons-only {
   line-height: normal;
 }
 .ui-button-text-only .ui-button-text {
-  padding: .4em 1em;
+  padding: 0.4em 1em;
 }
 .ui-button-icon-only .ui-button-text,
 .ui-button-icons-only .ui-button-text {
-  padding: .4em;
+  padding: 0.4em;
   text-indent: -9999999px;
 }
 .ui-button-text-icon-primary .ui-button-text,
 .ui-button-text-icons .ui-button-text {
-  padding: .4em 1em .4em 2.1em;
+  padding: 0.4em 1em 0.4em 2.1em;
 }
 .ui-button-text-icon-secondary .ui-button-text,
 .ui-button-text-icons .ui-button-text {
-  padding: .4em 2.1em .4em 1em;
+  padding: 0.4em 2.1em 0.4em 1em;
 }
 .ui-button-text-icons .ui-button-text {
   padding-left: 2.1em;
@@ -488,7 +488,7 @@ button.ui-button-icons-only {
 }
 /* no icon support for input elements, provide padding by default */
 input.ui-button {
-  padding: .4em 1em;
+  padding: 0.4em 1em;
 }
 /* button icon element(s) */
 .ui-button-icon-only .ui-icon,
@@ -507,12 +507,12 @@ input.ui-button {
 .ui-button-text-icon-primary .ui-button-icon-primary,
 .ui-button-text-icons .ui-button-icon-primary,
 .ui-button-icons-only .ui-button-icon-primary {
-  left: .5em;
+  left: 0.5em;
 }
 .ui-button-text-icon-secondary .ui-button-icon-secondary,
 .ui-button-text-icons .ui-button-icon-secondary,
 .ui-button-icons-only .ui-button-icon-secondary {
-  right: .5em;
+  right: 0.5em;
 }
 /* button sets */
 .ui-buttonset {
@@ -531,12 +531,12 @@ button.ui-button::-moz-focus-inner {
 }
 .ui-datepicker {
   width: 17em;
-  padding: .2em .2em 0;
+  padding: 0.2em 0.2em 0;
   display: none;
 }
 .ui-datepicker .ui-datepicker-header {
   position: relative;
-  padding: .2em 0;
+  padding: 0.2em 0;
 }
 .ui-datepicker .ui-datepicker-prev,
 .ui-datepicker .ui-datepicker-next {
@@ -585,12 +585,12 @@ button.ui-button::-moz-focus-inner {
 }
 .ui-datepicker table {
   width: 100%;
-  font-size: .9em;
+  font-size: 0.9em;
   border-collapse: collapse;
-  margin: 0 0 .4em;
+  margin: 0 0 0.4em;
 }
 .ui-datepicker th {
-  padding: .7em .3em;
+  padding: 0.7em 0.3em;
   text-align: center;
   font-weight: bold;
   border: 0;
@@ -602,23 +602,23 @@ button.ui-button::-moz-focus-inner {
 .ui-datepicker td span,
 .ui-datepicker td a {
   display: block;
-  padding: .2em;
+  padding: 0.2em;
   text-align: right;
   text-decoration: none;
 }
 .ui-datepicker .ui-datepicker-buttonpane {
   background-image: none;
-  margin: .7em 0 0 0;
-  padding: 0 .2em;
+  margin: 0.7em 0 0 0;
+  padding: 0 0.2em;
   border-left: 0;
   border-right: 0;
   border-bottom: 0;
 }
 .ui-datepicker .ui-datepicker-buttonpane button {
   float: right;
-  margin: .5em .2em .4em;
+  margin: 0.5em 0.2em 0.4em;
   cursor: pointer;
-  padding: .2em .6em .3em .6em;
+  padding: 0.2em 0.6em 0.3em 0.6em;
   width: auto;
   overflow: visible;
 }
@@ -634,7 +634,7 @@ button.ui-button::-moz-focus-inner {
 }
 .ui-datepicker-multi .ui-datepicker-group table {
   width: 95%;
-  margin: 0 auto .4em;
+  margin: 0 auto 0.4em;
 }
 .ui-datepicker-multi-2 .ui-datepicker-group {
   width: 50%;
@@ -697,16 +697,16 @@ button.ui-button::-moz-focus-inner {
   position: absolute;
   top: 0;
   left: 0;
-  padding: .2em;
+  padding: 0.2em;
   outline: 0;
 }
 .ui-dialog .ui-dialog-titlebar {
-  padding: .4em 1em;
+  padding: 0.4em 1em;
   position: relative;
 }
 .ui-dialog .ui-dialog-title {
   float: left;
-  margin: .1em 0;
+  margin: 0.1em 0;
   white-space: nowrap;
   /* S.D. July 22nd, 2015 Bug #189608 Buttons for minimize/maximize/etc. are being pushed down by the title after minimize. */
   /* width: 90%; */
@@ -715,7 +715,7 @@ button.ui-button::-moz-focus-inner {
 }
 .ui-dialog .ui-dialog-titlebar-close {
   position: absolute;
-  right: .3em;
+  right: 0.3em;
   top: 50%;
   width: 20px;
   margin: -10px 0 0 0;
@@ -725,7 +725,7 @@ button.ui-button::-moz-focus-inner {
 .ui-dialog .ui-dialog-content {
   position: relative;
   border: 0;
-  padding: .5em 1em;
+  padding: 0.5em 1em;
   background: none;
   overflow: auto;
 }
@@ -733,14 +733,14 @@ button.ui-button::-moz-focus-inner {
   text-align: left;
   border-width: 1px 0 0 0;
   background-image: none;
-  margin-top: .5em;
-  padding: .3em 1em .5em .4em;
+  margin-top: 0.5em;
+  padding: 0.3em 1em 0.5em 0.4em;
 }
 .ui-dialog .ui-dialog-buttonpane .ui-dialog-buttonset {
   float: right;
 }
 .ui-dialog .ui-dialog-buttonpane button {
-  margin: .5em .4em .5em 0;
+  margin: 0.5em 0.4em 0.5em 0;
   cursor: pointer;
 }
 .ui-dialog .ui-resizable-se {
@@ -770,7 +770,7 @@ button.ui-button::-moz-focus-inner {
 .ui-menu .ui-menu-item {
   position: relative;
   margin: 0;
-  padding: 3px 1em 3px .4em;
+  padding: 3px 1em 3px 0.4em;
   cursor: pointer;
   min-height: 0;
   /* support: IE7 */
@@ -800,7 +800,7 @@ button.ui-button::-moz-focus-inner {
   position: absolute;
   top: 0;
   bottom: 0;
-  left: .2em;
+  left: 0.2em;
   margin: auto 0;
 }
 /* right-aligned */
@@ -971,7 +971,7 @@ button.ui-button::-moz-focus-inner {
 .ui-slider .ui-slider-range {
   position: absolute;
   z-index: 1;
-  font-size: .7em;
+  font-size: 0.7em;
   display: block;
   border: 0;
   background-position: 0 0;
@@ -982,7 +982,7 @@ button.ui-button::-moz-focus-inner {
   filter: inherit;
 }
 .ui-slider-horizontal {
-  height: .8em;
+  height: 0.8em;
 }
 .ui-slider-horizontal .ui-slider-handle {
   top: -0.3em;
@@ -999,7 +999,7 @@ button.ui-button::-moz-focus-inner {
   right: 0;
 }
 .ui-slider-vertical {
-  width: .8em;
+  width: 0.8em;
   height: 100px;
 }
 .ui-slider-vertical .ui-slider-handle {
@@ -1033,15 +1033,15 @@ button.ui-button::-moz-focus-inner {
   background: none;
   color: inherit;
   padding: 0;
-  margin: .2em 0;
+  margin: 0.2em 0;
   vertical-align: middle;
-  margin-left: .4em;
+  margin-left: 0.4em;
   margin-right: 22px;
 }
 .ui-spinner-button {
   width: 16px;
   height: 50%;
-  font-size: .5em;
+  font-size: 0.5em;
   padding: 0;
   margin: 0;
   text-align: center;
@@ -1078,25 +1078,25 @@ button.ui-button::-moz-focus-inner {
 .ui-tabs {
   position: relative;
   /* position: relative prevents IE scroll bug (element with position: relative inside container with overflow: auto appear as "fixed") */
-  padding: .2em;
+  padding: 0.2em;
 }
 .ui-tabs .ui-tabs-nav {
   margin: 0;
-  padding: .2em .2em 0;
+  padding: 0.2em 0.2em 0;
 }
 .ui-tabs .ui-tabs-nav li {
   list-style: none;
   float: left;
   position: relative;
   top: 0;
-  margin: 1px .2em 0 0;
+  margin: 1px 0.2em 0 0;
   border-bottom-width: 0;
   padding: 0;
   white-space: nowrap;
 }
 .ui-tabs .ui-tabs-nav .ui-tabs-anchor {
   float: left;
-  padding: .5em 1em;
+  padding: 0.5em 1em;
   text-decoration: none;
 }
 .ui-tabs .ui-tabs-nav li.ui-tabs-active {
@@ -1276,14 +1276,14 @@ body .ui-tooltip {
 .ui-priority-secondary,
 .ui-widget-content .ui-priority-secondary,
 .ui-widget-header .ui-priority-secondary {
-  opacity: .7;
+  opacity: 0.7;
   filter: alpha(opacity=70);
   font-weight: normal;
 }
 .ui-state-disabled,
 .ui-widget-content .ui-state-disabled,
 .ui-widget-header .ui-state-disabled {
-  opacity: .35;
+  opacity: 0.35;
   nowhitespace: afterproperty;
   filter: alpha(opacity=35);
   cursor: default!important;
@@ -1913,7 +1913,7 @@ body .ui-tooltip {
 /* Overlays */
 .ui-widget-overlay {
   background: #fff;
-  opacity: .60;
+  opacity: 0.6;
   filter: alpha(opacity=60) !important;
   /*!important needed for ie7 and ie8*/
 }
@@ -1921,7 +1921,7 @@ body .ui-tooltip {
   margin: -5px 0 0 -5px;
   padding: 5px;
   background: #000000;
-  opacity: .20;
+  opacity: 0.2;
   filter: alpha(opacity=20);
 }
 /*
@@ -2454,7 +2454,7 @@ body .ui-tooltip {
   border: 0;
 }
 .ui-funnel-slice-selected {
-  opacity: 1.0;
+  opacity: 1;
 }
 .ui-funnel-slice-unselected {
   opacity: 0.49;
@@ -3123,7 +3123,7 @@ body .ui-tooltip {
   border-right-color: #D9D9D9;
 }
 .ui-iggrid > table > tbody tr:first-child th.ui-igpivotgrid-header {
-  border-top-color: #535353!important;
+  border-top-color: #535353 !important;
 }
 /*.ui-iggrid th a,
 .ui-iggrid th.ui-state-default a,
@@ -3344,11 +3344,11 @@ body .ui-tooltip {
 .ui-iggrid .ui-iggrid-paging .ui-iggrid-lastpage,
 .ui-iggrid-pagedropdownlabels,
 .ui-iggrid .ui-iggrid-paging input {
-  padding-top: 0.2em!important;
-  padding-bottom: 0.2em!important;
+  padding-top: 0.2em !important;
+  padding-bottom: 0.2em !important;
 }
 .ui-iggrid .ui-iggrid-paging .ui-igedit-field {
-  margin-top: 0.2em!important;
+  margin-top: 0.2em !important;
 }
 .ui-iggrid .ui-iggrid-footer .ui-iggrid-paging-item.ui-state-default,
 .ui-iggrid .ui-iggrid-footer .ui-iggrid-paging-item .ui-iggrid-page.ui-state-default {
@@ -3471,7 +3471,7 @@ body .ui-tooltip {
   border-width: 1px 1px 0 1px!important;
 }
 .ui-iggrid-groupbylabelrightedgeend {
-  border-color: #FFFFFF #FFFFFF #FFFFFF transparent!important;
+  border-color: #FFFFFF #FFFFFF #FFFFFF transparent !important;
 }
 .ui-iggrid tbody td.ui-iggrid-nongrouprowemptycell,
 .ui-iggrid tbody .ui-ig-altrecord td.ui-iggrid-nongrouprowemptycell {
@@ -3881,7 +3881,7 @@ background-color: @igGray3;*/
   background-color: #cccccc;
 }
 .ui-igscheduler-core .ui-igscheduler-monthview-day-appointment {
-  font-size: .75em;
+  font-size: 0.75em;
   padding: 0 0 0 3px!important;
 }
 .ui-igscheduler-tabs .ui-icon,
@@ -3902,7 +3902,7 @@ background-color: @igGray3;*/
   background-color: #D9D9D9;
 }
 .ui-igscheduler-core .ui-igscheduler-allday-event-subject {
-  font-size: .5em;
+  font-size: 0.5em;
   background-color: #D9D9D9;
   color: #000000;
 }
@@ -3944,7 +3944,7 @@ background-color: @igGray3;*/
   background-color: rgba(255, 255, 255, 0.005);
 }
 .ui-igscheduler-core .ui-igscheduler-dayweek-timeslot-descriptor {
-  font-size: .8em;
+  font-size: 0.8em;
   background-color: transparent;
   color: #000000;
 }
@@ -4407,10 +4407,10 @@ Spreadsheet
 }
 .ui-igplayer-tooltip .ui-widget-content,
 .ui-igtooltip > .ui-widget-content {
-  background-color: #e5e5e5!important;
+  background-color: #e5e5e5 !important;
   background-image: none!important;
-  border: 1px solid #c6c6c6!important;
-  color: #858585!important;
+  border: 1px solid #c6c6c6 !important;
+  color: #858585 !important;
 }
 .ui-igtooltip > .ui-widget-content {
   padding: 5px;
@@ -4517,3 +4517,4 @@ Spreadsheet
 .ui-progressbar.ui-widget-content {
   border: 0;
 }
+/*# sourceMappingURL=infragistics.theme.css.map */
