--- a/src/css/structure/modules/infragistics.ui.spreadsheet.css
+++ b/src/css/structure/modules/infragistics.ui.spreadsheet.css
@@ -814,3 +814,38 @@
 	padding-bottom: 5px;
 	clear: both;
 }
+
+/* Spinner
+   =======
+*/
+
+
+.ui-igspreadsheet .ui-spinner-input {
+	margin:0;
+	padding: 5px 20px 5px 5px;
+	display: block;
+	max-width: 100%;
+	height: 100%;
+	box-sizing: border-box;
+}
+
+.ui-igspreadsheet .ui-spinner-button {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 1.4em;
+}
+
+.ui-igspreadsheet .ui-spinner .ui-icon {
+	left: 0;
+	margin-top: 0;
+	position: relative;
+	top: 0;
+	margin-left: 0;
+}
+
+
+
+/* Spinner END
+   ===========
+*/
