--- a/src/css/themes/metro/modules/infragistics.ui.grid.less
+++ b/src/css/themes/metro/modules/infragistics.ui.grid.less
@@ -504,6 +504,13 @@ ui-iggrid-groupbyarea a,
 
 .ui-iggrid tfoot td.ui-state-hover {
   background-color: #ebebeb;
+  border-color: #dcdcdc;
+  border-width  : 0!important;
+}
+
+
+.ui-iggrid tfoot td.ui-state-hover:first-child {
+  border-left-width: 1px!important;
 }
 
 .ui-iggrid tfoot td.ui-state-default .ui-icon {
