white-space: nowrap on dropdown menus in financial chart toolbar

--- a/src/css/structure/modules/infragistics.ui.financialchart.css
+++ b/src/css/structure/modules/infragistics.ui.financialchart.css
@@ -141,6 +141,7 @@
 	position: absolute;
 	top: calc(100% + 1px);
 	box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+	white-space: nowrap;
 }
 
 .financialChartIndicatorMenuDropDownMenu {
